<resources>
    <string name="app_name">Drizzle</string>
    <string name="drizzle_app">Drizzle app</string>
    <string name="current_groups">Current Groups</string>

    <string name="first">First Fragment</string>
    <string name="second">second Fragment</string>
    <string name="third">third Fragment</string>
    <string name="not_currently_searching">Not currently searching.</string>
    <string name="find_my_group">Find My Group</string>
    <string name="welcome_name">Welcome, Name!</string>
    <string name="home">Drizzle</string>
    <string name="searching_button_line">Searching for your perfect study group... Press to cancel.</string>
    <string name="not_searching_button_line">Not currently searching.</string>
    <string name="subject_to_study">Subject to Study:</string>

    <string name="log_out">Log Out</string>
    <string name="lang">Change Language</string>
    <string name="verify">Verify Code</string>
    <string name="SignIn">Sign In / Register</string>
    <string name="EnterPhone">Please Input A Phone Number to login</string>
    <string name="FindGroup">Find Groups</string>
    <string name="group">Groups</string>
    <string name="AddGroups">Add Group</string>
    <string name="Refresh">Refresh</string>
    <string name="Friends">Friends</string>
    <string name="addFriends">Add Friends</string>
    <string name="time">hh:mm a</string>

    <string name="titleWiz">Let us get to know you</string>
    <string name="Name">Name</string>
    <string name="Postal">Postal Code</string>
    <string name="Gender1">Male</string>
    <string name="Gender2">Female</string>
    <string name="Gender3">Other</string>
    <string name="Major">Major</string>
    <string name="Minor">Minor</string>
    <string name="personalityT">Personality Traits</string>
    <string name="Settings">Profile Settings</string>

    <string-array name="group_titles">
        <item>Group 1</item>
        <item>Group 2</item>
        <item>Group 3</item>
        <item>Group 4</item>
        <item>Group 5</item>
        <item>Group 6</item>
        <item>Group 7</item>
        <item>Group 8</item>
        <item>Group 9</item>
    </string-array>

    <string-array name="group_desc">
        <item>Description 1</item>
        <item>Description 2</item>
        <item>Description 3</item>
        <item>Description 4</item>
        <item>Description 5</item>
        <item>Description 6</item>
        <item>Description 7</item>
        <item>Description 8</item>
        <item>Description 9</item>
    </string-array>

    <string-array name="firstNamesFriend">
        <item>First 1</item>
        <item>First 2</item>
        <item>First 3</item>
        <item>First 4</item>
        <item>First 5</item>
        <item>First 6</item>
        <item>First 7</item>
        <item>First 8</item>
        <item>First 9</item>
    </string-array>
    <string-array name="secondNamesFriend">
        <item>Second 1</item>
        <item>Second 2</item>
        <item>Second 3</item>
        <item>Second 4</item>
        <item>Second 5</item>
        <item>Second 6</item>
        <item>Second 7</item>
        <item>Second 8</item>
        <item>Second 9</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="postal_code">Postal code for you current place:</string>
    <string name="minor">Minor:</string>
    <string name="school">School:</string>
    <string name="major">Major:</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="submit">Submit</string>
    <string name="study_topic">Study topic:</string>
    <string name="group_name">Group name:</string>
    <string name="group_size">Group size:</string>
    <string name="button">Button</string>
    <string name="back">Back</string>
</resources>