<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner_minor"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:entries="@array/Minor"
        app:layout_constraintBottom_toBottomOf="@+id/textView_School3"
        app:layout_constraintStart_toEndOf="@+id/textView_School3"
        app:layout_constraintTop_toTopOf="@+id/textView_School3" />

    <TextView
        android:id="@+id/textView_School4"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/postal_code"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_School3"
        app:layout_constraintTop_toBottomOf="@+id/textView_School3" />

    <TextView
        android:id="@+id/textView_School3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/minor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_School"
        app:layout_constraintTop_toBottomOf="@+id/textView_School" />

    <TextView
        android:id="@+id/textView_School2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/school"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_Gender"
        app:layout_constraintTop_toBottomOf="@+id/textView_Gender" />

    <TextView
        android:id="@+id/textView_School"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/major"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_School2"
        app:layout_constraintTop_toBottomOf="@+id/textView_School2" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="64dp"
        android:gravity="end"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="140dp" />

    <TextView
        android:id="@+id/textView_Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/gender"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:entries="@array/Gender"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Gender"
        app:layout_constraintStart_toEndOf="@+id/textView_Gender"
        app:layout_constraintTop_toTopOf="@+id/textView_Gender" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInput_name"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/textView_name"
        app:layout_constraintStart_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toTopOf="@+id/textView_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInput_postalCode"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/textView_School4"
        app:layout_constraintStart_toEndOf="@+id/textView_School4"
        app:layout_constraintTop_toTopOf="@+id/textView_School4" />

    <Spinner
        android:id="@+id/spinner_school"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:entries="@array/School"
        app:layout_constraintBottom_toBottomOf="@+id/textView_School2"
        app:layout_constraintStart_toEndOf="@+id/textView_School2"
        app:layout_constraintTop_toTopOf="@+id/textView_School2" />

    <Spinner
        android:id="@+id/spinner_major"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:entries="@array/Major"
        app:layout_constraintBottom_toBottomOf="@+id/textView_School"
        app:layout_constraintStart_toEndOf="@+id/textView_School"
        app:layout_constraintTop_toTopOf="@+id/textView_School" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>