<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_addGroup">

    <EditText
        android:id="@+id/plainText_study_topic"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView_School2"
        app:layout_constraintStart_toEndOf="@+id/textView_School2"
        app:layout_constraintTop_toTopOf="@+id/textView_School2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/plainText_group_name"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView_name"
        app:layout_constraintStart_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toTopOf="@+id/textView_name"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/textView_School2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/study_topic"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_Gender"
        app:layout_constraintTop_toBottomOf="@+id/textView_Gender" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:gravity="end"
        android:text="@string/group_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="140dp" />

    <TextView
        android:id="@+id/textView_Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/group_size"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <Button
        android:id="@+id/button_submit_addGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="addGroupToCloud"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_groupSize"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:entries="@array/groupSize"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Gender"
        app:layout_constraintStart_toEndOf="@+id/textView_Gender"
        app:layout_constraintTop_toTopOf="@+id/textView_Gender" />

</androidx.constraintlayout.widget.ConstraintLayout>